--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -1,9 +1,22 @@
 [package]
-name = "surrealguard-cli"
+name = "surrealguard"
 version.workspace = true
 edition.workspace = true
 
 [dependencies]
 surrealguard-core = { path = "../core" }
+surrealguard-codegen = { path = "../codegen" }
 surrealdb.workspace = true
 surrealguard-macros = { path = "../macros" }
+clap = { version = "4", features = ["derive"]}
+clap_derive = { version = "4.0.0-rc.1"}
+walkdir = "2.5.0"
+console = "0.15.10"
+indicatif = "0.17.11"
+thiserror.workspace = true
+tokio = { version = "1.43.0", features = ["full"] }
+notify = "8.0.0"
+regex = "1.10.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+sha2 = "0.10.8"
