--- a/crates/codegen/Cargo.toml
+++ b/crates/codegen/Cargo.toml
@@ -13,3 +13,5 @@ convert_case = "0.6"
 handlebars = "4.3"   # For template-based code generation
 prettyplease = "0.2" # For Rust code formatting
 crypto = "0.5.1"
+serde = "1.0.217"
+serde_json = "1.0.138"
