--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -19,4 +19,4 @@ notify = "8.0.0"
 regex = "1.10.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sha2 = "0.10.8"
+toml = "0.8.20"
