--- a/crates/codegen/Cargo.toml
+++ b/crates/codegen/Cargo.toml
@@ -5,15 +5,12 @@ edition.workspace = true
 
 [dependencies]
 surrealdb.workspace = true
+thiserror.workspace = true
 surrealguard-core = { path = "../core" }
 surrealguard-macros = { path = "../macros" }
-
-# Codegen specific dependencies
-# convert_case = "0.6"
-# handlebars = "4.3"   # For template-based code generation
 serde = "1.0.217"
 toml = "0.8.20"
-thiserror.workspace = true
 regex = "1.11.1"
 walkdir = "2.5.0"
 notify = "8.0.0"
+console = "*"
